# kaisper

./: .gitignore  AGENTS.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  FINAL_STATUS.md  PROJECT_SPEC.md  RESEARCH.md  RULES.md  TASKS.md
scripts/: kaisper_heartbeat.py  quick_check.py
src/kaisper/: __init__.py  config.py  database.py  dom_analyzer.py  fetcher.py  llm.py  logging.py  models.py  network_capture.py  ollama.py  post_processor.py  prompts.py  schema_extraction.py  storage.py  template_generator.py  template_storage.py
tests/: __init__.py  test_foundation.py  test_template_generation.py
