[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaisper"
version = "0.1.0"
description = "AI-driven universal video scraper with template-based extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kaisper Team", email = "kaisper@example.com"}
]
keywords = ["scraping", "video", "ai", "llm", "crawling", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "obscura>=0.1.0",        # lightweight headless browser
    "playwright>=1.40.0",    # fallback browser
    "scrapy>=2.10.0",        # optional: for selector utilities
    "parsel>=1.8.0",         # CSS/XPath selectors
    "pydantic>=2.0.0",       # config & schema validation
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",         # async HTTP client
    "aiosqlite>=0.19.0",     # async SQLite
    "structlog>=23.0.0",     # structured logging
    "typer>=0.9.0",          # CLI
    "rich>=13.0.0",          # pretty console output
    "openai>=1.0.0",         # LLM backend
    "python-dotenv>=1.0.0",  # env config
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
ollama = [
    "ollama>=0.1.0",         # local LLM client
]

[project.scripts]
kaisper = "kaisper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
